--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,11 @@
 * {
     background-color: aliceblue;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+@font-face {
+    font-family: "Roboto Condensed";
+    src: url(https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,400;0,700;1,400&display=swap) format('woff2');
 }
 
 body {
@@ -25,19 +31,28 @@ body {
     border: 2px solid gray;
 }
 
-.red{
+.red, .red p{
     background-color: rgb(255, 0, 0);
 }
 
-.green{
+.green, .green p{
     background-color: rgb(0, 255, 0);
 }
 
-.blue{
+.blue, .blue p{
     background-color: rgb(0, 0, 255);
     color: aliceblue;
 }
 
-.font1 {
-    border: 2px solid red;
+.font-1 {
+    border: 3px solid red;
+    font-family: "Roboto Condensed";
+}
+
+.font-2 {
+    border: 3px solid green;
+}
+
+.font-3 {
+    border: 3px solid blue;
 }
